--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "razzle build",
     "test": "razzle test --env=jsdom",
     "prestart:prod": "yarn build",
-    "start:prod": "NODE_ENV=production node build/server.js",
+    "prod": "razzle build && NODE_ENV=production node build/server.js",
     "deploy": "git push heroku master"
   },
   "dependencies": {
